--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body {
-    font-family : Arial, Helvetica, sans-serif;
-    font-size : 18px;
-    background-color: burlywood;
-    width : 960px;
+    background-color: rgb(180, 171, 171);
 }
 
 img {
@@ -11,36 +8,69 @@ img {
     margin : 10px;
 }
 
+section {
+    width :1000px;
+    height : 70px;
+    background-color : #ffffff;
+}
+
 h1 {
     text-align : center;
-    width : 150px;
-    background-color : cornflowerblue;
-    padding : 10px 0px 10px 0px;
+    background-color : #4aaaa5;
+    color : white;
+    border-color : #cccccc;
     float : left;
+    font-family : Georgia, 'Times New Roman', Times, serif;
+    padding : 10px 0px;
+    margin : 25px 0px;
 }
 
-nav {
+.navbar {
+    color : gray;
     float : right;
+    text-decoration: none;
+    text-align : center;
+    padding : 35px 15px;
 }
+
 
 .about, .portfolio {
-    padding : 0px 10px 0px 0px;
+    padding-right : 10px;
 }
 
-.clearfix::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
+
+
+#aboutMeText {
+    height : 600px;
+    color : #dddddd;
+    background-color : #ffffff;
+    width : 960px;
+    margin : 0px 35px;
+}
+
 
 h3 {
-    text-align: center;
-    width :100px;
-    background-color : cornflowerblue;
-    padding : 10px 0px 10px 0px; 
+    text-align: left;
+    width :100%;
+    color : #4aaaa5;
+    padding : 10px 0px 10px 10px; 
+    font-family : Georgia, 'Times New Roman', Times, serif;
+    
 }
 
 .bio {
-    color : royalblue;
+    color : #777777;
     line-height : 50px;
+    font-family : Arial, Helvetica, sans-serif;
+    padding : 0px 0px 0px 10px;
+}
+
+
+footer {
+    width : 1000px;
+    text-align: center;
+    font-size : 10px;
+    background-color: #666666;
+    padding : 20px 0px 0px 0px;
+    margin : 15px;
 }
