--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ img {
 }
 
 section {
-    width :1000px;
-    height : 70px;
+    width :1200px;
+    height : 80px;
     background-color : #ffffff;
 }
 
@@ -45,7 +45,8 @@ h1 {
     color : #dddddd;
     background-color : #ffffff;
     width : 960px;
-    margin : 0px 35px;
+    border-color : #dddddd;
+    margin : 0px 120px;
 }
 
 
@@ -67,10 +68,10 @@ h3 {
 
 
 footer {
-    width : 1000px;
+    width : 1200px;
     text-align: center;
     font-size : 10px;
     background-color: #666666;
     padding : 20px 0px 0px 0px;
-    margin : 15px;
+    margin : 15px 0px;
 }
