--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img {
 }
 
 .mainHeader {
-    width :1200px;
+    width :100%;
     height : 80px;
     background-color : #ffffff;
     border-style : solid;
@@ -59,6 +59,7 @@ h1 {
     width : 960px;
     border-color : #dddddd;
     margin : 0px 120px;
+    align-content : center;
 }
 
 
@@ -80,7 +81,7 @@ h3 {
 
 
 footer {
-    width : 1200px;
+    width : 100%;
     text-align: center;
     font-size : 10px;
     background-color: #666666;
