--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 body {
     background-color: rgb(180, 171, 171);
+    width : 100%;
+    height : 100%;
+    margin : 0;
+    padding : 0;
 }
 
-img {
-    float : left;
-    border-radius : 30px;
-    margin : 10px;
-}
+
 
 .mainHeader {
-    width :100%;
+    width : 100%;
     height : 80px;
     background-color : #ffffff;
-    border-style : solid;
-    border-color : #cccccc;
     overflow: auto;
+    float : left;
+    /* margin-left : auto;
+    margin-right : auto; */
+    /* position : absolute; */
+
 }
 
 h1 {
@@ -29,37 +32,53 @@ h1 {
     height :100%;
 
 }
+a {
+    text-decoration: none;
+    color : #4aaaa5;
 
+}
 #navigation {
     padding : 25px;
     margin : 20px 120px;
+    color : #dddddd;
 }
-#navigation ul {
+ul {
     margin : 0px;
     padding : 0px;
     float : right;
+    width : 250px;
 
 }
-#navigation ul li  {
-    padding : 0px;
-    margin : 0px;
+
+li  {
+    padding : 8px 8px;
     list-style-type: none;
     display : inline;
+  
 }
+
 
 #navigation li:not(:first-child):before {
     content: " | ";
 }
 
+a:hover:not(.active) {
+    background-color: #111;
+}
 
-#aboutMeText {
-    height : 600px;
+
+#content {
+    height : auto;
+    width : 960px;
     color : #dddddd;
     background-color : #ffffff;
-    width : 960px;
     border-color : #dddddd;
-    margin : 0px 120px;
-    align-content : center;
+    /* margin : auto; */
+    position : absolute;
+    top : 20%;
+    left : 25%;
+    
+    
 }
 
 
@@ -72,7 +91,13 @@ h3 {
     
 }
 
-.bio {
+img {
+    float : left;
+    border-radius : 30px;
+    margin : 10px;
+}
+
+p {
     color : #777777;
     line-height : 50px;
     font-family : Arial, Helvetica, sans-serif;
@@ -81,10 +106,15 @@ h3 {
 
 
 footer {
-    width : 100%;
     text-align: center;
-    font-size : 10px;
     background-color: #666666;
-    padding : 20px 0px 0px 0px;
-    margin : 15px 0px;
+    position : absolute;
+    bottom : 0px;
+    width : 100%;
+}
+
+
+#wrapper {
+    margin-left :0 auto;
+    margin-right :0 auto;
 }
