--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing : border-box;
+    margin:0;
+    padding : 0;
+}
+
 body {
     background-color: rgb(180, 171, 171);
     width : 100%;
@@ -6,17 +12,11 @@ body {
     padding : 0;
 }
 
-
-
 .mainHeader {
     width : 100%;
     height : 80px;
     background-color : #ffffff;
-    overflow: auto;
-    float : left;
-    /* margin-left : auto;
-    margin-right : auto; */
-    /* position : absolute; */
+    margin : 0 auto;
 
 }
 
@@ -27,8 +27,8 @@ h1 {
     border-color : #cccccc;
     float : left;
     font-family : Georgia, 'Times New Roman', Times, serif;
-    padding : 20px 0px;
-    margin : 0px 120px;
+    margin-left: 120px;
+    padding-top : 20px;
     height :100%;
 
 }
@@ -38,8 +38,7 @@ a {
 
 }
 #navigation {
-    padding : 25px;
-    margin : 20px 120px;
+    padding-top : 40px;
     color : #dddddd;
 }
 ul {
@@ -51,7 +50,6 @@ ul {
 }
 
 li  {
-    padding : 8px 8px;
     list-style-type: none;
     display : inline;
   
@@ -67,20 +65,20 @@ a:hover:not(.active) {
 }
 
 
-#content {
+#maincontent {
     height : auto;
     width : 960px;
     color : #dddddd;
     background-color : #ffffff;
     border-color : #dddddd;
-    /* margin : auto; */
-    position : absolute;
-    top : 20%;
-    left : 25%;
-    
-    
+    margin : 0 auto;
+    margin-top : 50px;
+    padding-bottom : 10px;
 }
 
+#innercontent {
+    padding : 0 30px;
+}
 
 h3 {
     text-align: left;
@@ -90,6 +88,7 @@ h3 {
     font-family : Georgia, 'Times New Roman', Times, serif;
     
 }
+
 
 img {
     float : left;
@@ -101,7 +100,7 @@ p {
     color : #777777;
     line-height : 50px;
     font-family : Arial, Helvetica, sans-serif;
-    padding : 0px 0px 0px 10px;
+    padding-left : 10px;
 }
 
 
@@ -117,4 +116,41 @@ footer {
 #wrapper {
     margin-left :0 auto;
     margin-right :0 auto;
+}
+
+
+#name {
+    font-size :20px;
+}
+#name-box {
+    width : 100%;
+    height : 20px;
+}
+
+#email {
+    font-size : 20px;
+}
+
+#email-box {
+    width : 100%;
+    height : 20px;
+}
+
+
+#message {
+    font-size : 20px;
+}
+
+#message-box {
+    width : 100%;
+    height : 100px;
+}
+
+#submit-button {
+    background-color : #4aaaa5;
+    text-decoration-style: none;
+    color: white;
+    height : 20px;
+    width : 40px;
+    margin-top : 10px;
 }
