--- a/style.css
+++ b/style.css
@@ -107,15 +107,19 @@ p {
 footer {
     text-align: center;
     background-color: #666666;
-    position : absolute;
-    bottom : 0px;
     width : 100%;
+    height : 50px;
+    border-top : solid;
+    border-style: thin;
+    border-top-color : #4aaaa5;
+    margin-top : 10%;
+    padding-top : 30px;
 }
 
 
 #wrapper {
-    margin-left :0 auto;
-    margin-right :0 auto;
+    min-height : 100%;
+    margin-bottom : -50px;
 }
 
 
